# QuaverMetadataEditor

./: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mapitem.cpp  mapitem.h  maplistmodel.cpp  maplistmodel.h  quavermap.cpp  quavermap.h  translations.qrc
include/: FileField.h  ListEditButton.h  ListField.h  MainWindow.h  MapItem.h  MapListFieldEdit.h  MapListModel.h  MapStringEdit.h  QVariantHasher.h  QuaverMap.h  StringFieldEdit.h  WorkspaceState.h  qtyaml.h
src/: FileField.cpp  FileField.ui  ListEditButton.cpp  ListField.cpp  ListField.ui  MainWindow.cpp  MapItem.cpp  MapListFieldEdit.cpp  MapListFieldEdit.ui  MapListModel.cpp  MapStringEdit.cpp  QuaverMap.cpp  StringFieldEdit.cpp  WorkspaceState.cpp  main.cpp  mainwindow.ui
translations/: QuaverMetadataChanger_zh.ts
